# llm-credit-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: config.py  details_ui.py  fonts.py  icon.py  main.py  presets.py  settings_ui.py  tray.py  worker.py
assets/: README.txt
core/: ccusage.py  ccusage_db.py  ccusage_pricing.py
