[project]
name = "llm-credit-monitor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pystray>=0.19.5",
    "Pillow>=10.3.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
llmcreditmonitor = "app.main:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*"]
